--- a/FitApp/front-end/src/style/style.css
+++ b/FitApp/front-end/src/style/style.css
@@ -1,3 +1,17 @@
+.screen-max-width {
+  width: 1500px;
+}
+
+@media only screen and (max-width: 1505px) {
+  .screen-max-width {
+    width: 100%;
+  }
+}
+
+.content-wrapper {
+  margin-top: 10vh;
+}
+
 /*
 ------ AUTHENTICATION -------
 */
@@ -56,7 +70,7 @@
   background-color: #fe5196;
   border-style: none;
   border-radius: 9px;
-  width: 100%;
+  width: 30%;
   height: 6%;
 
   color: white;
@@ -170,10 +184,11 @@
   /*padding-top: 40px;*/
   display: flex;
   justify-content: space-between;
-  max-width: 100% !important;
+  /*    max-width: 100% !important;*/
 }
 .navbar-wrapper ul {
   height: 100vh;
+  width: 100%;
 }
 .nav-cate {
   flex-grow: 1;
@@ -186,8 +201,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 333px;
-  padding-left: 55px;
+  width: 97%;
+  padding-left: 4vw;
 }
 .nav-item a {
   font-family: "Open Sans";
@@ -195,12 +210,13 @@
   text-transform: uppercase;
   color: #fe5196 !important;
   letter-spacing: 4px;
+  padding: 0 !important;
 }
 .navbar-bullet {
   width: 11px;
   height: 58px;
   background-color: #fe5196;
-  margin-right: 20px;
+  margin-right: 2vw;
 }
 .nav li:hover {
   background-color: #fe5196;
@@ -208,4 +224,544 @@
 }
 .nav li:hover a {
   color: white !important;
+}
+
+.toggle-btn {
+  display: none;
+}
+
+/*
+-----REUSE CLASSES-----
+*/
+.main-btn {
+  /*button style*/
+  font-family: "Open Sans";
+  text-transform: uppercase;
+  color: #fe5196;
+  font-size: 30px;
+  letter-spacing: 4px;
+
+  border: 2.5px solid #fe5196;
+  background-color: white;
+  margin-bottom: 6vh;
+
+  padding-left: 19px;
+  padding-right: 18px;
+  padding-top: 4px;
+  padding-bottom: 6px;
+}
+.main-btn:hover {
+  /*btn hover*/
+  background-color: #fe5196;
+  cursor: pointer;
+  color: white !important;
+}
+.choose-layout {
+  /*display button in column*/
+  display: flex;
+  margin-left: 6vw;
+  align-items: center;
+  height: 100%;
+}
+.title {
+  font-family: "Open Sans";
+  text-transform: uppercase;
+  color: #fe5196;
+  font-size: 30px;
+  letter-spacing: 4px;
+
+  border: 2.5px solid #fe5196;
+  background-color: white;
+
+  padding-left: 19px;
+  padding-right: 18px;
+  padding-top: 4px;
+  padding-bottom: 6px;
+
+  display: inline-block;
+}
+.square-input {
+  /*square input box for number only*/
+  border: 2px solid #c1c6ce;
+  border-radius: 4px;
+  font-family: "Open Sans";
+  font-weight: bold;
+  font-size: 18px;
+  width: 68px;
+  padding-left: 10px;
+  padding-top: 18px;
+  padding-bottom: 18px;
+}
+
+.mini-nav {
+  /*mini nav used in tracking + settings*/
+  display: flex;
+  margin-bottom: 6vh;
+}
+.mini-nav img {
+  margin-right: 50px;
+}
+.mini-nav img:hover {
+  cursor: pointer;
+}
+
+/*
+-------PROGRESS-------
+*/
+.progress-date {
+  background-color: #fe5196;
+
+  padding-left: 19px;
+  padding-right: 18px;
+  padding-top: 4px;
+  padding-bottom: 6px;
+
+  display: inline-block;
+}
+.progress-date p {
+  font-family: "Open Sans";
+  text-transform: uppercase;
+  color: white;
+  font-size: 30px;
+  letter-spacing: 4px;
+  margin: 0;
+}
+
+.progress-spacing {
+  /*spacing between parts in progress screen*/
+  margin-top: 7vh;
+}
+
+.progress-line {
+  /*display row for each line of goal-consumed-burnt*/
+  display: flex;
+  flex-direction: row;
+}
+.goal-line {
+  /*vertical align for both goal lines*/
+  margin-top: 4vh;
+  margin-bottom: 24px;
+  margin-left: 72px;
+}
+.burnt-line {
+  /*vertical align*/
+  margin-left: 51px;
+}
+.goal {
+  font-family: "Open Sans";
+  font-size: 27px;
+  text-transform: uppercase;
+  color: #fe5196;
+  letter-spacing: 4px;
+  margin: 0 !important;
+}
+.kcal-pink {
+  font-family: "Open Sans";
+  font-size: 27px;
+  color: #fe5196;
+  margin: 0 !important;
+}
+.bar-max {
+  /*set the maximum width for the bar chart*/
+  width: 343px;
+  height: 43px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.bar-pink {
+  /*percentage that bar chart will rise*/
+  background-color: #fe5196;
+  width: 100%;
+  height: 100%;
+}
+
+.orange {
+  font-family: "Open Sans";
+  font-size: 27px;
+  text-transform: uppercase;
+  color: #f77062;
+  letter-spacing: 4px;
+  margin: 0 !important;
+}
+.kcal-orange {
+  font-family: "Open Sans";
+  font-size: 27px;
+  color: #f77062;
+  margin: 0 !important;
+}
+.bar-orange {
+  /*percentage that bar chart will rise*/
+  background-color: #f77062;
+  width: 65%;
+  height: 100%;
+}
+
+/*
+-------TRACKING-------
+*/
+/*
+------TRACK CONSUMED------
+*/
+.food-search input {
+  border: 2px solid #c1c6ce;
+  border-radius: 4px;
+  font-family: "Open Sans";
+  font-weight: bold;
+  font-size: 18px;
+  padding: 18px;
+  width: 100%;
+}
+.food-search input::placeholder {
+  color: #c1c6ce;
+}
+
+/*style for food name*/
+.food-search-result {
+  margin-top: 7vh;
+  margin-bottom: 7vh;
+}
+.food-name {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.food-name h2 {
+  font-family: "Open Sans";
+  font-weight: 600;
+  font-size: 32px;
+  color: #fe5196;
+  text-transform: capitalize;
+  margin-right: 35px;
+  margin-left: 35px;
+}
+.food-name-case {
+  height: 2px;
+  width: 125px;
+  background-color: #fe5196;
+}
+
+.quantity-serve-add {
+  /*set space for quantity, serving and add-button*/
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 3vh;
+}
+
+.food-att {
+  /*text style for both quantity and serving*/
+  font-family: "Open Sans";
+  font-size: 25px;
+  color: #fe5196;
+  margin: 0;
+  margin-right: 22px;
+}
+
+.att-container {
+  /*container for quantity and serving*/
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.serve select {
+  /*style for select tag*/
+  width: 115px;
+
+  border: 2px solid #c1c6ce;
+  border-radius: 4px;
+
+  font-family: "Open Sans";
+  font-weight: bold;
+  font-size: 18px;
+  color: #c1c6ce;
+
+  padding: 18px;
+}
+
+.add-btn {
+  /*add button*/
+  font-family: "Open Sans";
+  text-transform: uppercase;
+  color: white;
+  font-size: 30px;
+  letter-spacing: 4px;
+
+  border-style: none;
+  background-color: #f77062;
+
+  padding-left: 45px;
+  padding-right: 45px;
+  padding-top: 4px;
+  padding-bottom: 6px;
+}
+
+.att-line {
+  /*a line of attributes*/
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 3vh;
+}
+.att-wrap {
+  /*wrap for an attribute*/
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 165px;
+}
+.food-att-light {
+  font-family: "Open Sans";
+  font-size: 25px;
+  font-weight: 300;
+  color: #fe5196;
+  margin: 0;
+  margin-right: 22px;
+}
+.att-num {
+  /*attribute figure*/
+  border-style: none;
+  border-radius: 50%;
+  background-color: #fe5196;
+  width: 59px;
+  height: 59px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.att-num p {
+  font-family: "Open Sans";
+  font-size: 25px;
+  color: white;
+  margin: 0;
+}
+
+/*
+-------TRACK BURNT------
+*/
+.sport {
+  padding: 0 !important;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 55px;
+}
+.sport img {
+  width: 145px;
+  height: 145px;
+}
+
+.sport-name {
+  font-family: "Open Sans";
+  font-size: 32px;
+  font-weight: 600;
+  color: #fe5196;
+  text-transform: capitalize;
+  margin: 0;
+  /*    margin-right: 22px;*/
+}
+
+.sport-desc {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 25px;
+}
+
+.mins {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.min-text {
+  font-family: "Open Sans";
+  font-size: 25px;
+  font-weight: 300;
+  color: #fe5196;
+  margin: 0;
+  margin-right: 18px;
+}
+
+.add-btn-short {
+  border-style: none;
+  background-color: #f77062;
+
+  padding: 18px 18px 21px 18px;
+  width: 7vw;
+  height: 60px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-left: 0.5vw;
+}
+.add-btn-short p {
+  font-family: "Open Sans";
+  color: white;
+  font-size: 55px;
+  margin: 0;
+}
+.add-btn-short:hover {
+  cursor: pointer;
+}
+
+/*
+-----SETTINGS-----
+*/
+.sign-out {
+  font-family: "Open Sans";
+  text-transform: uppercase;
+  color: white;
+  font-size: 30px;
+  letter-spacing: 4px;
+
+  border-style: none;
+  background-color: #f77062;
+  margin-top: 4vh;
+
+  padding-left: 65px;
+  padding-right: 65px;
+  padding-top: 4px;
+  padding-bottom: 6px;
+}
+.sign-out:hover {
+  cursor: pointer;
+}
+
+/*
+-----EDIT GOAL-----
+*/
+.goal-edit-title {
+  font-family: "Open Sans";
+  text-transform: uppercase;
+  color: #fe5196;
+  font-size: 30px;
+  letter-spacing: 4px;
+
+  margin-bottom: 0;
+  margin-right: 15px;
+}
+
+.slider-line {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  width: 617px;
+
+  margin-bottom: 30px;
+}
+
+.slider {
+  display: flex;
+  flex-direction: row;
+}
+.slider-btn {
+  width: 60px;
+  height: 60px;
+  background-color: #fe5196;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slider-btn:hover {
+  cursor: pointer;
+}
+.plus-btn {
+  padding: 18px 18px 21px 18px;
+}
+.minus {
+  width: 30px;
+  height: 3px;
+  background-color: white;
+}
+.slider-btn p {
+  font-family: "Open Sans";
+  color: white;
+  font-size: 60px;
+  font-weight: 300;
+  margin: 0;
+}
+.slider-num {
+  width: 94px;
+  height: 60px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-top: 3px solid #fe5196;
+  border-bottom: 3px solid #fe5196;
+}
+.slider-num p {
+  font-family: "Open Sans";
+  font-size: 27px;
+  color: #fe5196;
+  margin: 0 !important;
+}
+
+.save-btn {
+  font-family: "Open Sans";
+  text-transform: uppercase;
+  color: white;
+  font-size: 30px;
+  letter-spacing: 4px;
+
+  border-style: none;
+  background-color: #f77062;
+  margin-top: 30px;
+  margin-bottom: 4vh;
+
+  padding-left: 45px;
+  padding-right: 45px;
+  padding-top: 4px;
+  padding-bottom: 6px;
+}
+.save-btn:hover {
+  cursor: pointer;
+}
+
+/*
+-----MOBILE VIEW-----
+*/
+@media only screen and (max-width: 992px) {
+  .content-wrapper {
+    margin-top: 72px;
+  }
+
+  /*
+    -----NAVBAR MOBILE-----
+    */
+  .toggle-btn {
+    display: block;
+    width: 37px;
+    height: 20px;
+    position: absolute;
+    z-index: 2;
+    top: 35%;
+    right: 30px;
+  }
+  .navbar-wrapper {
+    height: 70px;
+    position: fixed;
+    background-color: white;
+    z-index: 1;
+  }
+  .navbar-wrapper ul {
+    display: none;
+    z-index: 1;
+    background-color: white;
+    width: 100vw;
+
+    background-image: url("../png-elements/nav-drop-back.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .show-nav {
+    display: block !important;
+  }
 }
