--- a/FitApp/front-end/src/style/style.css
+++ b/FitApp/front-end/src/style/style.css
@@ -41,7 +41,7 @@
 .authenticate-logo {
   max-height: 317px;
   max-width: 317px;
-  width: 50%;
+  width: 20vw;
 }
 
 /*authentication input style*/
@@ -54,13 +54,21 @@
 .authenticate-input input {
   border: 2px solid #c1c6ce;
   border-radius: 4px;
+
   font-family: "Open Sans";
   font-weight: bold;
   font-size: 18px;
+  color: #fe5196;
+
   padding: 18px;
   width: 100%;
   margin-bottom: 3%;
 }
+
+.authenticate-input input:focus {
+  border: 2px solid #fe5196;
+}
+
 .authenticate-input input::placeholder {
   color: #c1c6ce;
 }
@@ -609,6 +617,72 @@
 }
 
 /*
+-------SCHEDULE--------
+*/
+.schedule {
+  max-width: 820px;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.week-day-line {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.week-day {
+  /*week day btn*/
+  border: solid 1.5px #fe5196;
+  border-radius: 50%;
+  background-color: white;
+  width: 50px;
+  height: 50px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.week-day p {
+  font-family: "Open Sans";
+  font-size: 21px;
+  color: #fe5196;
+  margin: 0;
+  text-transform: capitalize;
+}
+
+.week-day:hover {
+  background-color: #fe5196;
+  cursor: pointer;
+}
+.week-day:hover p {
+  color: white;
+}
+
+.food-schedule {
+  font-family: "Open Sans" !important;
+  color: #fe5196;
+  margin-bottom: 50px;
+}
+.food-schedule h3 {
+  padding: 0;
+  margin-top: 45px;
+  margin-bottom: 0;
+  font-weight: 600;
+  font-size: 28px;
+}
+.food-schedule ul {
+  padding-left: 30px;
+  margin: 0;
+}
+.food-schedule li {
+  font-size: 25px;
+}
+
+/*
 -----SETTINGS-----
 */
 .sign-out {
@@ -704,6 +778,22 @@
   margin: 0 !important;
 }
 
+.slider-num input {
+  outline: none;
+  width: 64px;
+  border-style: none;
+
+  font-family: "Open Sans";
+  font-size: 27px;
+  color: #fe5196;
+  margin: 0 !important;
+  text-align: center;
+}
+.slider-num input::-webkit-inner-spin-button,
+.slider-num input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
 .save-btn {
   font-family: "Open Sans";
   text-transform: uppercase;
@@ -713,7 +803,6 @@
 
   border-style: none;
   background-color: #f77062;
-  margin-top: 30px;
   margin-bottom: 4vh;
 
   padding-left: 45px;
@@ -723,6 +812,53 @@
 }
 .save-btn:hover {
   cursor: pointer;
+}
+
+.save-goal {
+  margin-top: 30px;
+}
+
+/*
+------EDIT PROFILE------
+*/
+
+.edit-profile-div {
+  margin-bottom: 4vh;
+}
+
+.edit-input {
+  display: flex;
+  flex-direction: column;
+  width: 535px;
+}
+.edit-input input {
+  border: 2px solid #c1c6ce;
+  border-radius: 4px;
+
+  font-family: "Open Sans";
+  font-weight: bold;
+  font-size: 18px;
+  color: #fe5196;
+
+  padding: 18px;
+  width: 100%;
+  margin-bottom: 3%;
+}
+
+.edit-input input:focus {
+  border: 2px solid #fe5196;
+}
+
+.edit-input input::placeholder {
+  color: #c1c6ce;
+}
+
+.save-profile-line {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  width: 535px;
 }
 
 /*
