--- a/FitApp/front-end/src/style/style.css
+++ b/FitApp/front-end/src/style/style.css
@@ -252,6 +252,9 @@
 .toggle-btn{
     display: none;
 }
+#white-logo{
+    display: none;
+}
 
 
 /*
@@ -572,6 +575,9 @@
 /*
 -------TRACK BURNT------
 */
+.col-sm-6{
+    display: block;
+}
 .sport{
     padding: 0 !important;
     display: flex;
@@ -597,7 +603,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 25px;
+    margin-left: 1vw;
 }
 
 .mins{
@@ -612,7 +618,7 @@
     font-weight: 300;
     color: #FE5196;
     margin: 0;
-    margin-right: 18px;
+    margin-right: 0.5vw;
 }
 
 .add-btn-short{
@@ -620,7 +626,7 @@
     background-color: #F77062;
 
     padding: 18px 18px 21px 18px;
-    width: 7vw;
+    width: 100px;
     height: 60px;
 
     display: flex;
@@ -668,20 +674,46 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.week-day p{
+
     font-family: "Open Sans";
     font-size: 21px;
     color: #FE5196;
     margin: 0;
     text-transform: capitalize;
+
+    outline: none;
+
+    margin: 0 !important;
+    text-align: center;
 }
 
 .week-day:hover{
     background-color: #FE5196;
     cursor: pointer;
+    color: white;
 }
-.week-day:hover p{
+.week-day-active{
+    border: solid 1.5px #FE5196;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-family: "Open Sans";
+    font-size: 21px;
+    margin: 0;
+    text-transform: capitalize;
+
+    outline: none;
+
+    margin: 0 !important;
+    text-align: center;
+
+    background-color: #FE5196;
+    cursor: pointer;
     color: white;
 }
 
@@ -704,6 +736,29 @@
 .food-schedule li{
     font-size: 25px;
 }
+
+
+/*
+------GUIDANCE------
+*/
+
+.sport-guide-content{
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
+}
+.sport-guide{
+    padding: 0 !important;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 35px;
+}
+.sport-guide img{
+    width: 145px;
+    height: 145px;
+}
+
+
 
 
 
@@ -912,6 +967,19 @@
         top: 35%;
         right: 30px;
     }
+    .toggle-style{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+    }
+    .toggle-line{
+        width: 100%;
+        height: 4px;
+        background-color: #FE5196;
+    }
+
+
     .navbar-wrapper{
         height: 70px;
         position: fixed;
@@ -920,6 +988,9 @@
     }
     .navbar-wrapper ul{
         display: none;
+
+        flex-direction: column;
+
         z-index: 1;
         background-color: white;
         width: 100vw;
@@ -931,4 +1002,46 @@
     .show-nav{
         display: block !important;
     }
+    .change-white{
+        background-color: white;
+    }
+
+    .navbar-bullet{
+        display: none;
+    }
+    #color-logo{
+        display: none;
+    }
+    #white-logo{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
+    .navbar-logo{
+        width: 200px;
+        height: 200px;
+        margin-left: 0;
+
+        margin-bottom: 5vh;
+        margin-top: 75px;
+    }
+    .nav li{
+        width: 100%;
+        padding-left: 0;
+        justify-content: center;
+        height: 60px;
+        margin-bottom: 25px;
+    }
+
+    .nav-item a{
+        color: white !important;
+    }
+    .nav li:hover{
+        background-color: white;
+        cursor: pointer;
+    }
+    .nav li:hover a{
+        color: #FE5196 !important;
+    }
+
 }
